# drop2

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
assets/receiver/: .assetsignore  app.bundle.js  package.json  styles.css
assets/receiver/scripts/: build.mjs
assets/receiver/src/: app.js  crypto.js  errors.js  frame-stream.js  live-watch.js  pin.js  send-app.js  stored-crypto.js  stored-upload.js
assets/receiver/test/: build.test.mjs  crypto.test.mjs  errors.test.mjs  live-watch.test.mjs  stored-crypto.test.mjs
assets/receiver/test/fixtures/: frame-stream-778.json
crates/drop2-cli/: Cargo.toml
crates/drop2-cli/src/: args.rs  run.rs
crates/drop2-core/: Cargo.toml
crates/drop2-core/src/: duration.rs  error.rs  hosted_share.rs  lib.rs  local_share.rs  output.rs  stored_share.rs
crates/drop2-crypto/: Cargo.toml
crates/drop2-crypto/src/: aead.rs  error.rs  kdf.rs  lib.rs  pin.rs  pin_hash.rs  stored.rs  stream.rs
crates/drop2-hosted/: Cargo.toml
crates/drop2-hosted/src/: api.rs  lib.rs  sender.rs  stored.rs  tls.rs
crates/drop2-local/: Cargo.toml  build.rs
crates/drop2-local/src/: assets.rs  error.rs  lib.rs  server.rs  session.rs
crates/drop2-local/tests/: local_share.rs  transfer_events.rs
crates/drop2-protocol/: Cargo.toml
crates/drop2-protocol/src/: error.rs  hosted.rs  lib.rs  local.rs  stored.rs
crates/drop2-transfer/: Cargo.toml
crates/drop2-transfer/src/: error.rs  frame_stream.rs  path.rs  source.rs  store_zip.rs  stored_chunks.rs
crates/shr-cli/: Cargo.toml
crates/shr-cli/src/: args.rs  main.rs  run.rs
crates/shr-core/: Cargo.toml
crates/shr-core/src/: duration.rs  error.rs  hosted_share.rs  lib.rs  local_share.rs  output.rs  stored_share.rs
crates/shr-crypto/: Cargo.toml
crates/shr-crypto/src/: aead.rs  id.rs  kdf.rs  key_exchange.rs  lib.rs  pin_hash.rs  stored.rs  stream.rs
crates/shr-hosted/: Cargo.toml
crates/shr-hosted/src/: api.rs  error.rs  lib.rs  sender.rs  stored.rs
crates/shr-local/: Cargo.toml
crates/shr-local/src/: assets.rs  error.rs  lib.rs  server.rs  session.rs
crates/shr-local/tests/: local_share.rs
crates/shr-protocol/: Cargo.toml
crates/shr-protocol/src/: hosted.rs  lib.rs  local.rs
crates/shr-transfer/: Cargo.toml
crates/shr-transfer/src/: error.rs  frame_stream.rs  lib.rs  path.rs  source.rs  store_zip.rs  stored_chunks.rs
scripts/: deploy-worker.sh  deploy.sh  install.sh
scripts/bench/: README.md  health-latency.mjs  lib.mjs  routes-smoke.mjs  run.mjs
worker/: package-lock.json  package.json  wrangler.jsonc
worker/migrations/: 0001_stored_shares.sql  0002_ip_abuse.sql  0003_browser_send.sql
worker/src/: abuse-tracking.test.mjs  abuse-tracking.ts  access-guard.ts  api-errors.test.mjs  api-errors.ts  cleanup.ts  index.ts  ip-hash.test.mjs  ip-hash.ts  live-join-token.test.mjs  live-join-token.ts  live-share-do.ts  live-share-state.test.mjs  live-share-state.ts  pin.test.mjs  pin.ts  protocol.ts  share-id.ts  stored-expiry.test.mjs  stored-expiry.ts  stored-limits.test.mjs  stored-limits.ts  stored-share.ts  types.ts
