[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
homepage = "https://drop2.app"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "ws"] }
base64 = "0.22"
bytes = "1.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
hkdf = "0.12"
local-ip-address = "0.6"
rand = "0.8"
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
walkdir = "2.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
