[package]
name = "drop2-core"
description = "Share lifecycle orchestration for drop2.app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
local-ip-address.workspace = true
serde = { workspace = true, features = ["derive"] }
drop2-crypto = { path = "../drop2-crypto" }
drop2-hosted = { path = "../drop2-hosted" }
drop2-local = { path = "../drop2-local" }
drop2-protocol = { path = "../drop2-protocol" }
drop2-transfer = { path = "../drop2-transfer" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
