[package]
name = "drop2-hosted"
description = "Internet live share client for drop2.app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
drop2-crypto = { path = "../drop2-crypto" }
drop2-protocol = { path = "../drop2-protocol" }
drop2-transfer = { path = "../drop2-transfer" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
