[package]
name = "drop2-transfer"
description = "Streaming and packaging for drop2.app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait = "0.1"
bytes.workspace = true
crc32fast = "1.4"
futures = "0.3"
os_pipe = "1.2"
pin-project-lite = "0.2"
drop2-crypto = { path = "../drop2-crypto" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tokio-util = { workspace = true, features = ["io"] }
walkdir.workspace = true
zeroize.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
