[package]
name = "shr-cli"
description = "shr.rip command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shr"
path = "src/main.rs"

[dependencies]
clap.workspace = true
open = "5.3"
shr-core = { path = "../shr-core" }
shr-crypto = { path = "../shr-crypto" }
shr-hosted = { path = "../shr-hosted" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
