[package]
name = "shr-core"
description = "Share lifecycle orchestration for shr.rip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
local-ip-address.workspace = true
serde = { workspace = true, features = ["derive"] }
shr-crypto = { path = "../shr-crypto" }
shr-hosted = { path = "../shr-hosted" }
shr-local = { path = "../shr-local" }
shr-protocol = { path = "../shr-protocol" }
shr-transfer = { path = "../shr-transfer" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
