[package]
name = "shr-crypto"
description = "Cryptographic primitives for shr.rip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true
hex = "0.4"
serde_json.workspace = true
