[package]
name = "shr-hosted"
description = "Internet live share client for shr.rip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shr-crypto = { path = "../shr-crypto" }
shr-protocol = { path = "../shr-protocol" }
shr-transfer = { path = "../shr-transfer" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
