[package]
name = "shr-local"
description = "Local HTTP server and LAN sharing for shr.rip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures = "0.3"
http.workspace = true
local-ip-address.workspace = true
mime_guess = "2.0"
pin-project-lite = "0.2"
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shr-crypto = { path = "../shr-crypto" }
shr-protocol = { path = "../shr-protocol" }
shr-transfer = { path = "../shr-transfer" }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tokio-util = { workspace = true, features = ["io"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = "0.1"
uuid = { version = "1.17", features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
shr-crypto = { path = "../shr-crypto" }
tempfile = "3.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
